# audio-control-protocol

./: CMakeLists.txt  README.md  audio_communication_protocol.h  audio_control_protocol.h
include/: audio_control_protocol.h  audio_packet_helper.h  device_control_protocol.h  device_packet_helper.h
include/audio_control_protocol/: audio_ch_status_helper.h  audio_ch_status_protocol.h  audio_control_protocol.h  audio_packet_helper.h  audio_protocol_common.h  device_control_protocol.h  device_packet_helper.h
src/: audio_packet_helper.c  device_packet_helper.c
